# fediverser

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  setup.cfg
.woodpecker/: .build.yml  .test.yml
compose/: cloudflared.yml  dev.yml  hub.yml
fediverser/admin/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
fediverser/apps/core/: adapters.py  admin.py  apps.py  authentication.py  choices.py  exceptions.py  factories.py  filters.py  forms.py  handlers.py  models.py  serializers.py  settings.py  signals.py  tasks.py  urls.py  views.py
fediverser/apps/core/management/commands/: get_new_reddit_posts.py  mirror_reddit.py  pull_from_reddit.py  push_comments_to_lemmy.py  push_submissions_to_lemmy.py  push_to_lemmy.py
fediverser/apps/core/migrations/: 0001_initial.py  0002_lemmycommunityinvitetemplate_lemmycommunityinvite.py  0002_person_useraccount_lemmy_account.py  0003_fediversedinstance_creates_reddit_mirror_bots_and_more.py  0003_redditaccount_marked_as_spammer_and_more.py  0004_alter_fediversedinstance_instance_endorsement_and_more.py  0004_redditcomment_marked_as_spam_and_more.py  0005_reddittolemmycommunity_automatic_comment_policy_and_more.py  0005_rename_endorsemement_endorsemententry_endorsement_and_more.py  0006_alter_fediversedinstance_portal_url.py  0006_redditaccount_marked_as_bot.py  0007_community_url_person_url_and_more.py  0007_redditcomment_status_redditcomment_status_changed.py  0008_add_url.py  0008_mark_mirrored_migrations.py  0009_break_recommendation_changefeed.py  0009_remove_duplicated_lemmy_mirrored_posts.py  0010_alter_lemmymirroredpost_unique_together.py  0010_remove_reddittocommunityrecommendationentry_recommendation_and_more.py  0011_alter_changefeedentry_options_alter_community_url_and_more.py  0011_redditsubmission_status_and_more.py  0012_mark_mirrored_submissions.py  0012_setinstancecountry_instanceextrainformation_and_more.py  0013_redditaccount_controller.py  0013_useraccount_tracked_subreddits.py  0014_connectedredditaccountentry_actor_and_more.py  0014_redditcommunity_last_synced_at.py  0015_mergedentry.py  0015_redditaccount_subreddits.py  0016_alter_redditcomment_status_and_more.py  0016_connectedactivitypubaccount.py  0017_remove_community_tags_remove_instance_category_and_more.py  0017_useraccount.py  0018_communityannotation_instanceannotation_and_more.py  0019_remove_useraccount_reddit_account.py  0020_alter_entry_feed_redditapplicationkey_and_more.py  0021_invitetemplate_redditaccountauthorizedscope_and_more.py  0022_redditordeclinedinvite.py  0023_alter_instance_software.py  0024_setinstanceasclosed_setinstanceasabandoned.py
fediverser/apps/core/models/: __init__.py  account.py  accounts.py  activitypub.py  cms.py  common.py  feeds.py  invites.py  mapping.py  mirroring.py  network.py  reddit.py
fediverser/apps/core/static/fediverser/css/: site.css
fediverser/apps/core/templates/account/: login.html  signup.html
fediverser/apps/core/templates/admin/: redditaccount_change_form.html  redditcommunity_change_form.html
fediverser/apps/core/templates/fediverser/messages/: mirrored_post_disclosure.tmpl.md
fediverser/apps/core/templates/invites/: already_accepted.tmpl.txt  direct_message.tmpl.md  expired.tmpl.txt
fediverser/apps/core/templates/portal/: base.tmpl.html
fediverser/apps/core/templates/portal/change_request/: list.tmpl.html
fediverser/apps/core/templates/portal/community/: create.tmpl.html  detail.tmpl.html  list.tmpl.html
fediverser/apps/core/templates/portal/community_proposal/: create.tmpl.html
fediverser/apps/core/templates/portal/generic/: base.tmpl.html  create.tmpl.html  detail.tmpl.html  form.tmpl.html  listing.tmpl.html
fediverser/apps/core/templates/portal/home/: header.tmpl.html  instance_finder.tmpl.html  invite.tmpl.html  page.tmpl.html
fediverser/apps/core/templates/portal/instance/: create.tmpl.html  detail.tmpl.html  header.tmpl.html  list.tmpl.html  signup.tmpl.html
fediverser/apps/core/templates/portal/pages/: about.tmpl.html  home.tmpl.html
fediverser/apps/core/templates/portal/pages/local/: home.tmpl.html
fediverser/apps/core/templates/portal/pages/network/: home.tmpl.html  instance_finder.tmpl.html
fediverser/apps/core/templates/portal/partials/: header.tmpl.html  home_header.tmpl.html
fediverser/apps/core/templates/portal/reddit_community/: create.tmpl.html  detail.tmpl.html  header.tmpl.html  list.tmpl.html
fediverser/apps/core/templates/portal/reddit_submission/: detail.tmpl.html
fediverser/apps/core/templates/portal/redditor/: decline_invite.tmpl.html  detail.tmpl.html  header.tmpl.html  list.tmpl.html
fediverser/apps/core/templates/wagtailadmin/: login.html
fediverser/apps/core/templatetags/: fediverser.py
fediverser/apps/core/tests/: common.py  test_api.py  test_models.py  test_views.py
fediverser/apps/core/views/: __init__.py  ambassadors.py  auth.py  common.py  home.py  mapping.py  network.py  onboarding.py  reddit.py
fediverser/apps/lemmy/: admin.py  apps.py  authentication.py  choices.py  forms.py  handlers.py  models.py  serializers.py  services.py  settings.py
fediverser/apps/lemmy/management/commands/: mirror_reddit.py
fediverser/apps/lemmy/migrations/: 0001_initial.py  0002_federationqueuestate_imageupload_instanceblock_and_more.py  0002_upgrade_to_019.py  0003_imagedetails_delete_imageupload.py
fediverser/apps/web/: apps.py  urls.py  views.py
fediverser/apps/web/static/web/stylesheets/: simple.min.css  site.scss
fediverser/apps/web/templates/account/: login.html
fediverser/apps/web/templates/socialaccount/: login.html
fediverser/apps/web/templates/web/: about.tmpl.html  base.tmpl.html  home.tmpl.html
fediverser/apps/web/templatetags/: web.py
fediverser/services/admin/: urls.py
fediverser/services/base/: asgi.py  celery.py  database_router.py  settings.py  wsgi.py
fediverser/services/portal/: urls.py
