[tool.black]
line-length = 99
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | build
  | dist
)/
'''

[tool.isort]
py_version = 311
line_length = 99
default_section = "THIRDPARTY"
combine_as_imports = true
order_by_type = true
profile = "black"
known_first_party = "fediverser"

[tool.poetry]
name = "fediverser"
version = "0.2.0"
description = "Tools to help bring content from legacy networks to the Fediverse"
authors = ["Raphael Lullis <raphael@mushroomlabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4"
praw = "^7.7.1"
pythorhead = "^0.25.2"
requests = "^2"
langdetect = "^1.0"
django = "^4.2"
django-environ = "^0.10"
django-allauth = "^0.63.3"
celery = "^5.4.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
django-celery-beat = "^2.5"
psycopg2-binary = "^2.9"
redis = "^5.0.7"
requests-cache = "^1.1"
factory-boy = "^3.3.0"
django-redis = "^5.4.0"
django-extensions = "^3.2.3"
django-model-utils = "^4.3"
django-celery-results = "^2.5.1"
bcrypt = "^4.0"
pycryptodome = "^3"
pysass = "^0.1.0"
pyjwt = "^2.8.0"
django-rest-framework = "^0.1.0"
pyotp = "^2.9.0"
cloudscraper = "^1.2.71"
wagtail = "^6.1.2"
wagtail-autocomplete = "^0.11.0"
django-filter = "^24.2"
django-tree-queries = "^0.19.0"
feedparser = "^6.0.11"
djangorestframework-link-header-pagination = "^0.1.1"
django-rest-polymorphic = "^0.1.10"

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
pytest = "^7.4"
pytest-env = "^1.1.3"
pytest-django = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
