[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fediverser"
version = "0.2.1"
requires-python = ">=3.10,<4"
description = "Tools to help bring content from legacy networks to the Fediverse"
authors = [{name = "Raphael Lullis", email = "raphael@mushroomlabs.com"}]
license = {text = "AGPLv3"}
readme = "README.md"

dependencies = [
  "praw",
  "pythorhead",
  "requests",
  "langdetect",
  "django",
  "django-environ",
  "django-allauth",
  "celery",
  "uvicorn[standard]",
  "django-celery-beat",
  "psycopg2-binary",
  "redis",
  "requests-cache",
  "factory-boy",
  "django-redis",
  "django-extensions",
  "django-model-utils",
  "django-celery-results",
  "bcrypt",
  "pycryptodome",
  "pysass",
  "pyjwt",
  "pyotp",
  "cloudscraper",
  "wagtail",
  "wagtail-autocomplete",
  "django-filter",
  "django-tree-queries",
  "feedparser",
  "djangorestframework-link-header-pagination",
  "django-rest-polymorphic",
  "django-countries",
  "django-invitations",
  "django-cors-headers",
  "drf-spectacular[sidecar]",
  "djangorestframework",
]

[project.optional-dependencies]
dev = [
  "ipython",
  "ruff",
  "pytest",
  "pytest-env",
  "pytest-django",
]

[tool.hatch.build.targets.wheel]
packages = ["fediverser"]

[tool.uv.sources]
fediverser = { workspace = true }

[tool.ruff]
fix = true
line-length = 99
exclude = ["build", "dist", ".git", "migrations"]

[tool.ruff.lint]
ignore = ["B011", "E203", "E402", "E731"]
select = ["E", "F", "W", "I"]
extend-select = ["I"]


[tool.isort]
py_version = 313
line_length = 99
default_section = "THIRDPARTY"
combine_as_imports = true
order_by_type = true
profile = "black"
known_first_party = "fediverser"

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py"]
env = [
    "TEST_MODE=true",
    "FEDIVERSER_BROKER_URL=memory://",
    "FEDIVERSER_CACHE_BACKEND=django.core.cache.backends.locmem.LocMemCache",
    "FEDIVERSER_PORTAL_URL=http://portal-test.example.org",
    "FEDIVERSER_CONNECTED_LEMMY_INSTANCE=",
    "FEDIVERSER_ROOT_URLCONF=fediverser.services.portal.urls",
]
filterwarnings = [
    "ignore:the imp module is deprecated in favour of importlib:DeprecationWarning",
    "ignore:The loop argument is deprecated:DeprecationWarning",
    "ignore:'pkgutil.find_loader' is deprecated:DeprecationWarning",
    "ignore:'locale.getdefaultlocale' is deprecated:DeprecationWarning",
]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
warn_unused_configs = true
warn_unused_ignores = true
